# mns

./: .env.dev  .gitignore  Cargo.toml  README.md  justfile
bindings/: Cargo.toml
bindings/src/: base_module_guard.rs  base_transaction_guard.rs  compatibility_fallback_handler.rs  default_callback_handler.rs  deploy.rs  deployed_safe.rs  eip7702.rs  eip7951.rs  enum.rs  erc1155_token_receiver.rs  erc721_token_receiver.rs  erc777_tokens_recipient.rs  error_message.rs  executor.rs  fallback_manager.rs  guard_manager.rs  i_fallback_manager.rs  i_guard_manager.rs  i_module_guard.rs  i_module_manager.rs  i_native_currency_payment_fallback.rs  i_owner_manager.rs  i_proxy.rs  i_safe.rs  i_signature_validator.rs  i_signature_validator_constants.rs  i_storage_accessible.rs  i_transaction_guard.rs  ierc165.rs  lib.rs  lib_sort.rs  mns_registry.rs  module_manager.rs  native_currency_payment_fallback.rs  owner_manager.rs  safe.rs  safe_math.rs  safe_proxy.rs  safe_proxy_factory.rs  safe_storage.rs  (+9 more)
contracts/: .gitmodules  README.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: MNSRegistrar.sol  MNSRegistry.sol
contracts/test/: MNSRegistrar.t.sol  MNSRegistry.t.sol  SafeIntegration.t.sol
mns/: Cargo.toml  README.md
mns-cli/: Cargo.toml  README.md
mns-cli/src/: config.rs  key.rs  main.rs
mns-server/: Cargo.toml  README.md
mns-server/src/: config.rs  content_type.rs  html.rs  main.rs  resolver.rs  server.rs  staging.rs  syncer.rs
mns-server/src/html/: error.rs  home.rs  layout.rs  name.rs  owner.rs  script.rs  style.rs  wallet.rs
mns-server/src/registry/: alloy.rs  mod.rs
mns-server/src/store/: lmdb.rs  mod.rs
mns-server/static/css/: error.css  home.css  main.css  name.css  owner.css  wallet.css
mns-server/static/js/: credential.js  editor.js  history.js  home.js  home_avatars.js  navbar.js  owner.js  particles.js  theme.js  wallet.js
mns-server/templates/: base.html  error.html  footer.html  home.html  name.html  name_not_found.html  navbar.html  owner.html  owners.html  wallet.html
mns-server/wasm/: Cargo.toml
mns-server/wasm/src/: lib.rs
mns/src/: client.rs  keys.rs  lib.rs  name.rs  networks.rs  signed_packet.rs  wallet.rs
scripts/: bind.sh  build.sh
src/: lib.rs  main.rs  name.rs
