[package]
name = "mns-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
mns = { path = "../mns" }
bindings = { path = "../bindings" }
alloy = { version = "2.1", features = ["contract", "signer-local", "transport-http", "rpc-client", "providers"] }
clap = { version = "4", features = ["derive"] }
keyring = { version = "4", features = ["v1"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
dirs = "6"
k256 = "0.13"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
url = "2"
