[package]
name = "mns-server"
version = "0.1.0"
edition = "2021"

[dependencies]
mns = { path = "../mns" }
bindings = { path = "../bindings" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
sneed = { version = "0.0.22", features = ["serde-wincode"] }
fallible-iterator = "0.3"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
alloy = { version = "2.1", default-features = false, features = ["contract", "rpc-client", "providers", "transport-http", "sol-types", "reqwest", "reqwest-rustls-tls"] }
url = "2"
hex = "0.4"
thiserror = "2"
async-trait = "0.1"
dotenvy = "0.15"
simple-dns = "0.11"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
time = { version = "0.3", features = ["formatting"] }
minijinja = "2"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
