[package]
name = "mns"
version = "0.1.0"
edition = "2024"
authors = ["Nuh <nuh@nuh.dev>"]
description = "Short random names for permissionless DNS"
homepage = "https://mlkut.org/"
repository = "https://github.com/mlkut/mns"
license = "MIT"
keywords = ["p2p", "dns", "decentralized", "sovereign", "identity"]
categories = ["network-programming"]

[dependencies]
ed25519-dalek = { version = "=3.0.0-rc.0", default-features = false }
sha2 = "0.11"
simple-dns = "0.11"
thiserror = "2"

[dev-dependencies]
proptest = "1.11.0"
rayon = "1"
