[package]
name = "mns"
version = "0.1.0"
edition = "2024"
authors = ["Nuh <nuh@nuh.dev>"]
description = "Short random names for permissionless DNS"
homepage = "https://mlkut.org/"
repository = "https://github.com/mlkut/mns"
license = "MIT"
keywords = ["p2p", "dns", "decentralized", "sovereign", "identity"]
categories = ["network-programming"]

[features]
default = []
wallet = ["dep:bip39", "dep:hmac", "dep:k256", "dep:tiny-keccak", "dep:hex", "dep:getrandom", "dep:sha2_10"]
chain = ["wallet", "dep:alloy", "dep:bindings"]

[dependencies]
ed25519-dalek = { version = "=3.0.0-rc.0", default-features = false }
sha2 = "0.11"
sha2_10 = { package = "sha2", version = "0.10", default-features = false, optional = true }
simple-dns = "0.11"
thiserror = "2"
ntimestamp = "1"
bip39 = { version = "1.0", optional = true }
hmac = { version = "0.12", optional = true }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa"], optional = true }
tiny-keccak = { version = "2", features = ["keccak"], optional = true }
hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
alloy = { version = "2.1", default-features = false, features = ["sol-types", "consensus", "k256", "signer-local", "provider-http", "network"], optional = true }
bindings = { path = "../bindings", default-features = false, optional = true }
getrandom = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1.11.0"
rayon = "1"
