[package]
name = "mns"
version = "0.1.0"
edition = "2024"
authors = ["Nuh <nuh@nuh.dev>"]
description = "Short random names for permissionless DNS"
homepage = "https://mlkut.org/"
repository = "https://github.com/mlkut/mns"
license = "MIT"
keywords = ["p2p", "dns", "decentralized", "sovereign", "identity"]
categories = ["network-programming"]

[features]
default = []
chain = ["dep:alloy", "dep:bindings", "dep:hex"]

[dependencies]
ed25519-dalek = { version = "=3.0.0-rc.0", default-features = false }
sha2 = "0.11"
simple-dns = "0.11"
thiserror = "2"
ntimestamp = "1"
getrandom = "0.2"
hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
alloy = { version = "2.1", default-features = false, features = ["sol-types", "consensus", "k256", "signer-local", "provider-http", "network"], optional = true }
bindings = { path = "../bindings", default-features = false, optional = true }


[dev-dependencies]
proptest = "1.11.0"
rayon = "1"
