[package]
name = "mns-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mns = { path = "../../mns", features = ["chain"] }
bindings = { path = "../../bindings" }
alloy = { version = "2.1", default-features = false, features = ["sol-types"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
