[package]
name = "mns-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures", "getrandom"]

[lib]
crate-type = ["cdylib"]

[dependencies]
mns = { path = "../../mns", features = ["chain"] }
alloy = { version = "2.1", default-features = false, features = ["sol-types", "provider-http", "network"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "ecdsa"] }
tiny-keccak = { version = "2", features = ["keccak"] }
ed25519-dalek = { version = "=3.0.0-rc.0", default-features = false }
bip39 = "1.0"
hmac = "0.12"
sha2 = "0.11"
sha2_10 = { package = "sha2", version = "0.10" }
zeroize = "1"
